<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@drawable/the_forest"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textStyle="bold"
        android:textColor="#0CFF65"
        android:textSize="28sp"
        android:layout_marginBottom="32dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageButton
            android:id="@+id/btn_buka_ras_kucing"
            android:padding="8dp"
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="150dp"
            android:src="@drawable/british_shorthair_biru"
            android:scaleType="fitCenter"
            />
        <ImageButton
            android:id="@+id/btn_buka_ras_hantu"
            android:padding="15dp"
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="150dp"
            android:src="@drawable/snowy_owl_by_cycoze"
            android:scaleType="fitCenter"
            />
        <ImageButton
            android:id="@+id/btn_buka_ras_ular"
            android:padding="20dp"
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="150dp"
            android:src="@drawable/kobra"
            android:scaleType="fitCenter"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tekan_gambar_hewan_untuk_membuka_galeri"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:layout_marginBottom="32dp"
        />
    <LinearLayout
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:id="@+id/btn_activity_main_pindah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/biodata"
            android:onClick="Pindah"
            />
    </LinearLayout>
</LinearLayout>